refactor: change Spock extension from global to annotation-driven activation
BREAKING CHANGE: Spock specifications now require explicit @DatabaseTest annotation

## Spock Extension Changes

- Replace IGlobalExtension with IAnnotationDrivenExtension for explicit opt-in
- Add @DatabaseTest annotation for db-tester-spock module
- Add @SpringBootDatabaseTest annotation for db-tester-spock-spring-boot-starter
- Remove META-INF/services files for global extension registration
- Simplify extension logic by removing Spring annotation detection heuristics

## JDBC Package Restructuring

- Reorganize jdbc package into read/ and write/ subpackages
- Move TableReader, TypeConverter (renamed from LobConverter) to jdbc/read/
- Move executors (Insert, Update, Delete, Truncate, Refresh) to jdbc/write/
- Add TableOrderResolver for foreign key dependency resolution
- Consolidate ParameterBinder into write package
- Remove unused classes: ForeignKeyDependencyExtractor, ForeignKeyResolver,
  ResultSetIterator, ValueParser

## Code Quality Improvements

- Improve ComparisonResult formatting and error handling
- Refactor DataSetComparator for better readability
- Simplify DelimitedParser with Stream API
- Clean up DataSetFactory and DataSetMerger
- Update module-info.java exports

## Documentation

- Update README with @DatabaseTest usage examples
- Reorganize module selection table for clarity
- Update technical specifications